<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.irprogram.tirbargh.navigation_drawer"
    android:background="#e8e8e8">

    <ImageView
        android:layout_width="280dp"
        android:layout_height="240dp"
        android:id="@+id/imageView"
        android:src="@drawable/icon"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAboutMe"
            android:layout_gravity="center_horizontal"
            android:onClick="onBtnAboutMeClick"
            android:text="@string/btn_about_me"
            android:textSize="30sp" />

        <Button
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_contact_me"
            android:id="@+id/btnContactMe"
            android:layout_gravity="center_horizontal"
            android:onClick="onBtnContactMeClick"
            android:textSize="30sp" />

        <Button
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_exit"
            android:id="@+id/btnExit"
            android:layout_gravity="center_horizontal"
            android:onClick="onBtnExitClick"
            android:textSize="30sp" />

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/label_category"
            android:id="@+id/label_category"
            android:textColor="#0009ff"
            android:textSize="24dp"
            android:padding="5dp" />

        <ListView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/category_list"
            android:paddingRight="10dp" />

    </LinearLayout>

</RelativeLayout>