<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.irprogram.tirbargh.insert_ads">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:layout_gravity="center_vertical"
                    android:text="@string/insert_ads_form_title"
                    android:textSize="25sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/insert_ads_title"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:hint="@string/insert_ads_form_error_hint" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/insert_ads_form_intro"
                    android:textSize="25sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/insert_ads_intro"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:hint="@string/insert_ads_form_error_hint" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_vertical"
                    android:text="@string/insert_ads_form_desc"
                    android:textSize="25sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/insert_ads_desc"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:hint="@string/insert_ads_form_error_hint" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_gravity="center_vertical"
                    android:text="@string/insert_ads_form_seller"
                    android:textSize="25sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/insert_ads_seller"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:hint="@string/insert_ads_form_error_hint" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:layout_gravity="center_vertical"
                    android:text="@string/insert_ads_form_email"
                    android:textSize="25sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/insert_ads_email"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:hint="@string/insert_ads_form_error_hint" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:layout_gravity="center_vertical"
                    android:text="قیمت"
                    android:textSize="25sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/insert_ads_phone"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:hint="@string/insert_ads_form_error_hint" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:layout_gravity="center_vertical"
                        android:text="@string/insert_ads_form_cat"
                        android:textSize="25sp" />


                </RelativeLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:id="@+id/insert_ads_cat_list"
                        android:visibility="gone"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_insert_ads_selected_cat"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"
                        android:textSize="25sp"
                        android:text="@string/insert_ads_form_sel_cat_text" />

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner"
                        android:layout_below="@+id/textView7"
                        android:layout_centerHorizontal="true" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"
                        android:layout_gravity="center_vertical"
                        android:text="@string/insert_ads_form_image"
                        android:textSize="25sp" />
                </RelativeLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/insert_ads_form_btn_camera"
                                android:id="@+id/btnCamera"
                                android:textSize="25sp"
                                android:onClick="onBtnCameraClick" />

                            <TextView
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView9"
                                android:textSize="25sp" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/insert_ads_form_btn_gallery"
                                android:id="@+id/btnGallery"
                                android:textSize="25sp"
                                android:onClick="onBtnGalleryClick" />
                        </LinearLayout>
                    </RelativeLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/insert_ads_form_sel_cat_text"
                                android:id="@+id/insert_ads_selected_img_txt"
                                android:singleLine="true"
                                android:textSize="25dp"
                                android:layout_centerVertical="true"
                                android:layout_alignParentStart="true" />
                        </RelativeLayout>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:id="@+id/insert_ads_selected_img"
                            android:src="@drawable/no_picture" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insert_ads_form_btn_insert"
                    android:id="@+id/btnInsertAds"
                    android:textSize="25sp"
                    android:onClick="onBtnInsertAdsClick" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    android:textSize="25sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Back_to_home"
                    android:id="@+id/btnBack"
                    android:textSize="25sp"
                    android:onClick="onBtnBackClick" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>